tests/driver/fail/arg_type_mismatch/test.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

func f_abs(f: float32) ret float32 {
    return f;
}

func i_abs(f: int32) ret int32 {
    return f;
}

func main() ret int64 {
    let pi = 3.1415;
    let pi = f_abs(pi);
    let three = 3;
    let three = i_abs(three);
    return 0;
}
